RESOLVED FIXED234181
REGRESSION (r286841): [ iOS ] Many webrtc tests flaky failing on iOS
https://bugs.webkit.org/show_bug.cgi?id=234181
Summary REGRESSION (r286841): [ iOS ] Many webrtc tests flaky failing on iOS
Attachments
Patch (13.11 KB, patch)
2021-12-11 08:04 PST, youenn fablet
no flags
Patch (13.11 KB, patch)
2021-12-11 08:56 PST, youenn fablet
no flags
Patch for landing (13.04 KB, patch)
2021-12-13 09:00 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2021-12-10 15:38:09 PST
youenn fablet
Comment 2 2021-12-11 08:04:09 PST
youenn fablet
Comment 3 2021-12-11 08:56:30 PST
Eric Carlson
Comment 4 2021-12-13 08:42:55 PST
Comment on attachment 446890 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=446890&action=review > Source/WebKit/NetworkProcess/webrtc/NetworkRTCUDPSocketCocoa.mm:308 > + RELEASE_LOG_ERROR(WebRTC, "NetworkRTCUDPSocketCocoaConnections failed processing UDP data with error %d", nw_error_get_error_code(error)); Nit: if you log `errorCode` you won't have to call nw_error_get_error_code() again
youenn fablet
Comment 5 2021-12-13 09:00:19 PST
Created attachment 447010 [details] Patch for landing
EWS
Comment 6 2021-12-13 11:53:18 PST
Committed r286961 (245184@main): <https://commits.webkit.org/245184@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 447010 [details].
Note You need to log in before you can comment on or make changes to this bug.