Cherry-pick r286961. rdar://problem/86343642

REGRESSION (r286841): [ iOS ] Many webrtc tests flaky failing on iOS
    https://bugs.webkit.org/show_bug.cgi?id=234181
    <rdar://problem/86343642>

    Reviewed by Eric Carlson.

    Use network connection state change callback to know when connection fails or is cancelled.
    Introduce ConnectionStateTracker to know when to stop reading new UDP packets.
    ConnectionStateTracker will be stopped when state is changed to failed or cancelled as well as when the whole connection is closed.
    Renaming m_nwConnections to m_connections as m_nwConnections name was already used.
    Reduce error logging to only new error codes or when connectino enters unrecoverable failure (hence changing to failed state).

    Covered by existing tests.

    * NetworkProcess/webrtc/NetworkRTCUDPSocketCocoa.h:
    * NetworkProcess/webrtc/NetworkRTCUDPSocketCocoa.mm:

    Canonical link: https://commits.webkit.org/245184@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286961 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245169.5@safari-613.1.12-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613.1.12-branch@287096 268f45cc-cd09-0410-ab3c-d52691b4dbfc